save color updates

--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -315,7 +315,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-pc .sheet-con-track button[type='action']:hover,
   .sheet-pc button[data-i18n='default']:hover {
     color: #fff;
-    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #1e4583; }
+    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #afd3e2; }
   .sheet-pc h1 {
     background-color: #afd3e2;
     font-size: 1em;
@@ -418,7 +418,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1e4583), to(transparent));
     background-image: -webkit-linear-gradient(#1e4583, transparent);
     background-image: linear-gradient(#1e4583, transparent), linear-gradient(#1e4583, transparent);
-    border-top: 2px solid #1e4583;
+    border-top: 2px solid #afd3e2;
     clear: both;
     border-top-right-radius: 10px;
     border-top-left-radius: 0px; }
@@ -579,12 +579,14 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       width: 100%; }
   .sheet-pc div.sheet-skill-box div.sheet-buttons {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1.5fr 1.5fr;
     overflow: hidden; }
+  .sheet-pc div.sheet-skill-box input[name='attr_specialization'][value=''] ~ div.sheet-buttons {
+    grid-template-columns: 1fr; }
   .sheet-pc div.sheet-skill-box input[name='attr_rating_modifier'] {
     width: 3.5em; }
   .sheet-pc div.sheet-skill-box div.sheet-row-long {
-    grid-template-columns: 1fr 3.5em 5em 5em 1em 1em;
+    grid-template-columns: 1fr 3.5em 5em 1em 1em;
     padding: 1% 0.5%;
     width: 100%; }
     .sheet-pc div.sheet-skill-box div.sheet-row-long h3:nth-of-type(1n+2) {
@@ -595,7 +597,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     font-size: 1em;
     font-style: italic; }
   .sheet-pc div.sheet-skill-box div.repitem {
-    grid-template-columns: 1fr 3.5em 5em 5em 1em 1em; }
+    grid-template-columns: 1fr 3.5em 5em 1em 1em; }
     .sheet-pc div.sheet-skill-box div.repitem label[data-i18n-title='notes'],
     .sheet-pc div.sheet-skill-box div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-skill-box div.repitem div.sheet-collapse {
@@ -627,7 +629,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       width: 3.5em; }
     .sheet-pc div.sheet-skill-box div.repitem div.sheet-settings {
       grid-column: 1 / 7;
-      grid-template-columns: 1fr 3.5em 5em 5em 1em 1em; }
+      grid-template-columns: 1fr 3.5em 5em 1em 1em; }
   .sheet-pc div.sheet-arms div.sheet-headers {
     display: grid; }
     .sheet-pc div.sheet-arms div.sheet-headers h2:nth-of-type(1n+2) {
@@ -2043,10 +2045,7 @@ span.sheet-d6 {
 /**************************** START OF THE NPC SHEET *************************************/
 /****************************************************************************************/
 .sheet-npc {
-  background-color: #040404;
   border-radius: 3px;
-  color: #fff;
-  margin-top: -20px;
   min-height: 800px;
   padding: 10px 10px;
   width: 720px;
@@ -2060,10 +2059,8 @@ span.sheet-d6 {
     color: #fff; }
     .sheet-npc button:hover, .sheet-npc button:focus {
       border-color: whitesmoke;
-      color: #610b0d;
+      color: #fff;
       font-weight: bold; }
-  .sheet-npc h1, .sheet-npc h2, .sheet-npc h3, .sheet-npc h4, .sheet-npc label {
-    color: #fff; }
   .sheet-npc h1 {
     line-height: unset;
     font-size: 1.1em; }
@@ -2075,9 +2072,9 @@ span.sheet-d6 {
   .sheet-npc input[type='radio'] {
     opacity: 1; }
   .sheet-npc input[type='text']:placeholder-shown, .sheet-npc input[type='number']:placeholder-shown {
-    border: 1px dotted #610b0d; }
+    border: 1px dotted #1e4583; }
   .sheet-npc input.sheet-toggle:checked + span {
-    color: #610b0d; }
+    color: #1e4583; }
   .sheet-npc textarea, .sheet-npc select {
     color: #fff;
     background-color: #555; }
@@ -2085,6 +2082,7 @@ span.sheet-d6 {
     grid-template-columns: 2.5em 1fr 4em 1fr 4em 1fr 4em 1fr 4em;
     grid-row-gap: 10%; }
     .sheet-npc div.sheet-tabs button[type='roll'] {
+      color: #1c1c1c;
       grid-area: 2 / 1 / 2 / 2; }
     .sheet-npc div.sheet-tabs img {
       grid-area: 1 / 1 / 2 / 4;
@@ -2114,7 +2112,7 @@ span.sheet-d6 {
       width: 100%;
       height: 100%; }
     .sheet-npc div.sheet-tabs input[name='attr_stats_toggle']:checked + span {
-      color: #610b0d; }
+      color: #1e4583; }
     .sheet-npc div.sheet-tabs span.sheet-pictos, .sheet-npc div.sheet-tabs .sheet-settings-toggle input[type='checkbox'] + span, .sheet-settings-toggle .sheet-npc div.sheet-tabs input[type='checkbox'] + span,
     .sheet-npc div.sheet-tabs .sheet-settings-flag input[type='checkbox'] + span,
     .sheet-settings-flag .sheet-npc div.sheet-tabs input[type='checkbox'] + span, .sheet-npc div.sheet-tabs .sheet-flag-primary + div > span, .sheet-npc div.sheet-tabs .repcontrol span.repcontrol_edit:after, .repcontrol .sheet-npc div.sheet-tabs span.repcontrol_edit:after,
@@ -2521,11 +2519,11 @@ div.sheet-footer {
 
 .sheet-npc .repcontrol .repcontrol_edit:after,
 .sheet-npc .repcontrol .repcontrol_add:after {
-  color: #fff; }
+  color: #1c1c1c; }
 
 .repcontrol .repcontrol_edit:hover:after,
 .repcontrol .repcontrol_add:hover:after {
-  color: #FCD116;
+  color: #1e4583;
   background-color: none; }
 
 .itemcontrol {
@@ -2596,7 +2594,7 @@ div.sheet-footer {
   border: none; }
 
 .sheet-rolltemplate-rolls .inlinerollresult.fullfail {
-  color: #FCD116; }
+  color: #1e4583; }
 
 .sheet-rolltemplate-rolls .inlinerollresult.fullcrit {
   color: #fff; }
