--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -640,7 +640,6 @@ include src/html/hidden.html
 
 //- SCRIPTS
 script(type="text/worker")
-
   include src/js/attributes.js
 
   include src/js/Classes/PrimaryWeapon.js
@@ -648,3 +647,10 @@ script(type="text/worker")
   include src/js/processingFunctions.js
 
   include src/js/newScripts.js
+  
+  //Old functions working to become obsolete
+  include src/js/scripts.js
+
+  include src/js/versioning.js
+
+  include src/js/eventhandlers.js
