--- a/Shadowrun4thEdition/Shadowrun4thEdition.scss
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.scss
@@ -58,7 +58,7 @@
 		.sheet-con-track button[type='action']:hover,
 		button[data-i18n='default']:hover {
 			color      : #fff;
-			text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $accent1;
+			text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $primary;
 		}
 
 		h1 {
@@ -100,7 +100,9 @@
 			margin-top: 1%;
 			grid-row-gap: 10%;
 
-			button[type='roll'] {grid-area: 2 / 5 / 2 / 5;}
+			button[type='roll'] {
+        grid-area: 2 / 5 / 2 / 5;
+      }
 
 				/***** PLAYER DATA INPUTS *****/
 			h1 {
@@ -164,9 +166,13 @@
 		input[type='radio'] {
 			@extend %toggleRelative;
 			
-			& + span { font-family: 'pictos'; }
+			& + span { 
+        font-family: 'pictos'; 
+      }
 			
-			&:checked + span {  color: $accent1; }
+			&:checked + span {  
+        color: $accent1;
+      }
 		}
 
 		select {
@@ -197,7 +203,7 @@
 			background-image: -webkit-gradient(linear, 0 0, 0 100%, from($accent1), to(transparent));
 			background-image: -webkit-linear-gradient($accent1, transparent);
 			background-image: linear-gradient($accent1, transparent), linear-gradient($accent1, transparent);
-			border-top      : 2px solid $accent1;
+			border-top      : 2px solid $primary;
 			clear           : both;
 			border-top-right-radius: 10px;
 			border-top-left-radius : 0px;
@@ -362,7 +368,7 @@
 
 		/***** SKILLS *****/
 		div.sheet-skill-box {
-			$skillGrid: 1fr 3.5em 5em 5em 1em 1em;
+			$skillGrid: 1fr 3.5em 5em 1em 1em;
 
 			h2:nth-of-type(1n+2) { text-align: center; }
 
@@ -391,8 +397,12 @@
 
       div.sheet-buttons {
         display: grid;
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: 1.5fr 1.5fr;
         overflow: hidden;
+      }
+
+      input[name='attr_specialization'][value=''] ~ div.sheet-buttons {
+        grid-template-columns: 1fr;
       }
         
 			input[name='attr_skill'] { @extend %borderBottom; }
@@ -818,7 +828,9 @@
           top         : 4px;
           width       : 80px;
 
-          & + h1 {color: #9a9a9a;}
+          & + h1 {
+            color: #9a9a9a;
+          }
 
           &:hover ~ h1,
           &:checked ~ h1  {
