--- a/Shadowrun4thEdition/src/scss/_hide.scss
+++ b/Shadowrun4thEdition/src/scss/_hide.scss
@@ -212,5 +212,5 @@
 	%highlight-button {
 		background-color: $primary;
 		box-shadow      : inset 0px 0px 3px 1px $accent1; 
-		color           : #fff;
+		color           : $white;
 	}
