--- a/Shadowrun4thEdition/src/scss/_repeatingsection.scss
+++ b/Shadowrun4thEdition/src/scss/_repeatingsection.scss
@@ -43,12 +43,14 @@
 
 		.sheet-npc .repcontrol .repcontrol_edit:after,
 		.sheet-npc .repcontrol .repcontrol_add:after {
-			color: #fff;}
+			color: $blackish;
+    }
 
 		.repcontrol .repcontrol_edit:hover:after,
 		.repcontrol .repcontrol_add:hover:after {
-			color           : #FCD116;
-			background-color: none;}
+			color           : $accent1;
+			background-color: none;
+    }
 
 	.itemcontrol {z-index: 10;}
 
@@ -62,4 +64,5 @@
 
 	.itemcontrol .repcontrol_del {
 		background-color: darkred;
-		@extend .sheet-pictos;}
+		@extend .sheet-pictos;
+  }
