--- a/Shadowrun4thEdition/src/scss/_rolltemplate.scss
+++ b/Shadowrun4thEdition/src/scss/_rolltemplate.scss
@@ -47,7 +47,7 @@
 	.sheet-rolltemplate-rolls .inlinerollresult.importantroll {
 		border: none;}
 
-	.sheet-rolltemplate-rolls .inlinerollresult.fullfail {color: #FCD116;}
+	.sheet-rolltemplate-rolls .inlinerollresult.fullfail {color: $accent1;}
 
 	.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {color: #fff;}
 
