--- a/Shadowrun4thEdition/src/scss/_npc.scss
+++ b/Shadowrun4thEdition/src/scss/_npc.scss
@@ -1,25 +1,20 @@
 .sheet-npc {
-	background-color: #040404;
 	border-radius   : 3px;
-	color           : #fff;
-	margin-top      : -20px;
 	min-height      : 800px;
 	padding         : 10px 10px;
 	width           : 720px;
 
 	button {
 		background: #333;
-		color: $white;;
+    color: $white;
 
 		&:hover,
-	    &:focus {
+	   &:focus {
 		    border-color: $secondary;
-		    color       : $accent;
+		    color       : $white;
 		    font-weight : bold;
 		}
 	}
-
-	h1, h2, h3, h4, label { color: #fff; }
 
 	h1 { 
 		line-height: unset;
@@ -38,14 +33,14 @@
 
 		&[type='text']:placeholder-shown,
 		&[type='number']:placeholder-shown {
-			border: 1px dotted $accent;
+			border: 1px dotted $accent1;
 		}
 
-		&.sheet-toggle:checked + span { color: $accent; }
+		&.sheet-toggle:checked + span { color: $accent1; }
 	}
 
 	textarea, select {
-		color           : #fff;
+		color           : $white;
 		background-color: #555;
 	}
 
@@ -53,7 +48,11 @@
 		@extend %display-inline-grid;
 		grid-template-columns: 2.5em 1fr 4em 1fr 4em 1fr 4em 1fr 4em;
 		grid-row-gap: 10%;
-		button[type='roll'] {grid-area: 2 / 1 / 2 / 2;}
+
+		button[type='roll'] {
+      color: $blackish;
+      grid-area: 2 / 1 / 2 / 2;
+    }
 
 		img {
 			grid-area: 1 / 1 / 2 / 4;
@@ -78,7 +77,7 @@
 			height: 100%;
 		}
 
-		input[name='attr_stats_toggle']:checked + span { color: $accent; }
+		input[name='attr_stats_toggle']:checked + span { color: $accent1; }
 		span.sheet-pictos {
 			text-align: center;
 			font-size: 1.2em;
@@ -132,14 +131,16 @@
 				opacity: 1; 
 			}
 
-			div.sheet-settings { min-width: 700px; }
+			div.sheet-settings { 
+        min-width: 700px; 
+      }
 		}
 	}
 
 	/*:+:+:+: NPC ATTRIBUTES :+:+:+:*/
 	div.sheet-attribute {
-		border-bottom: 1px solid #fff;
-		border-top   : 1px solid #fff;
+		border-bottom: 1px solid $white;
+		border-top   : 1px solid $white;
 		grid-row-gap: 5%;
 		margin       : 2% 0px;
 		padding: 1% 1% 3% 1%;
