give buttons more space, fix drones

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -591,6 +591,8 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     display: grid;
     grid-template-columns: 1.5fr 1.5fr;
     overflow: hidden; }
+  .sheet-pc div.sheet-skill-box input[name='attr_specialization'][value=''] ~ div.sheet-buttons {
+    grid-template-columns: 1fr; }
   .sheet-pc div.sheet-skill-box input[name='attr_rating_modifier'] {
     width: 3.5em; }
   .sheet-pc div.sheet-skill-box div.sheet-row-long {
