--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -541,6 +541,10 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
         grid-template-columns: 1.5fr 1.5fr;
         overflow: hidden;
       }
+
+      input[name='attr_specialization'][value=''] ~ div.sheet-buttons {
+        grid-template-columns: 1fr;
+      }
         
 			input[name='attr_skill'] { @extend %borderBottom; }
 
