--- a/Shadowrun4thEdition/src/pug/_mixins.pug
+++ b/Shadowrun4thEdition/src/pug/_mixins.pug
@@ -6,7 +6,7 @@ mixin rollButton(header, base, rollFormula)
 mixin skillButton(specialization, skillType)
     - const rollName = specialization === true ? 'specialization' : 'skill';
     - const rollFormula = specialization === true ? '@{dicepool}+@{attribute}+2' : '@{dicepool}+@{attribute}';
-    - const desc = specialization === true ? 'Spec: @{specialization}, @{display_limit}' : '@{display_limit}';
+    - const desc = specialization === true ? 'Spec: @{specialization}' : '';
     - const display = specialization === true ? 'attr_specialization' : skillType != 'active' ? 'attr_skill' : 'attr_display_skill';
     button.eclipse(name=`roll_${rollName}` type='roll' value!=rollBeginging+'{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(('+rollFormula+')'+rollEnding+'{{desc='+desc+'}}')
         span(name=display)
@@ -50,16 +50,6 @@ mixin attributeSelect(selectedDefault)
             option(data-i18n=attributeName value='@{' + attributeName + '}' selected) #{attribute}
         else
              option(data-i18n=attributeName value='@{' + attributeName + '}') #{attribute}
-
-//- LIMIT SElECTS
-mixin limitSelect(selectedDefault)
-    option(value='none') -
-    each val, key in limitObject
-        - const attributeName = key.toLowerCase().replace(' ', '_');
-        if key === selectedDefault
-            option(data-i18n=attributeName value='@{' + val + '}' selected) #{key}
-        else
-            option(data-i18n=attributeName value='@{' + val + '}') #{key}
 
 //- HOST & SPRITE NPCS
 mixin hostSprite(object, attrName)
