update the colors

--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -1837,8 +1837,7 @@ div.sheet-right-header {
 /***** EDGE & MATRIX CONDITION HEXAGONS *****/
 .sheet-edg-hex,
 .sheet-con-hex {
-  position: relative;
-  top: -60px; }
+  position: relative; }
   .sheet-edg-hex .sheet-edg-hex input[type='checkbox'],
   .sheet-edg-hex .sheet-con-hex input[type='radio'],
   .sheet-con-hex .sheet-edg-hex input[type='checkbox'],
@@ -2548,11 +2547,11 @@ div.sheet-footer {
   border-radius: 3px 3px 3px 3px; }
 
 .sheet-rolltemplate-rolls .sheet-template-header {
-  background-color: #431714;
+  background-color: #afd3e2;
   border: 1px solid #000;
   border-bottom: 2px solid #000;
   box-shadow: inset 0px 0px 3px 1px #000;
-  color: #fff;
+  color: #1c1c1c;
   font-size: 1.5em;
   font-variant: small-caps;
   font-weight: bold;
