--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -16,7 +16,7 @@ include src/pug/_variables.pug
 
 .pc
   .tabs
-    img(alt='Shadowrun black and metallic logo' src=`${imageSource}/ShadowrunLogo.png`)
+    img(alt='Shadowrun' src=`${imageSource}/ShadowrunLogo.png`)
     h1(data-i18n='character') Character
     label(data-i18n-title='character name' title='character name')
       input(type='text' name='attr_character_name' placeholder='Character name' title='@{character_name}')
