--- a/Shadowrun4thEdition/src/scss/_rolltemplate.scss
+++ b/Shadowrun4thEdition/src/scss/_rolltemplate.scss
@@ -3,11 +3,11 @@
 		border-radius: 3px 3px 3px 3px;}
 
 	.sheet-rolltemplate-rolls .sheet-template-header {
-		background-color: #431714;
+		background-color: $primary;
 		border          : 1px solid #000;
 		border-bottom   : 2px solid #000;
 		box-shadow      : inset 0px 0px 3px 1px #000;
-		color           : #fff;
+		color           : $blackish;
 		font-size       : 1.5em;
 		font-variant    : small-caps;
 		font-weight     : bold;
@@ -24,7 +24,7 @@
 		letter-spacing: 1px;}
 
 	.sheet-rolltemplate-rolls .sheet-template-row {
-		color           : #fff;
+		color           : $white;
 		text-align      : center;
 		font-size       : 18px;
 		background-color: #555;
@@ -37,7 +37,7 @@
 
 	.sheet-rolltemplate-rolls .inlinerollresult {
 		display         :inline-block;
-		color           : #fff;
+		color           : $white;
 		font-size       : 25px;
 		background-color: transparent;
 		border          : none;}
@@ -49,7 +49,7 @@
 
 	.sheet-rolltemplate-rolls .inlinerollresult.fullfail {color: $accent1;}
 
-	.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {color: #fff;}
+	.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {color: $white;}
 
 	.sheet-rolltemplate-rolls .sheet-template-desc {font-size: 0.8em;}
 
