--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -988,20 +988,6 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-attribute .sheet-row-perception .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-perception .sheet-col1 input { font-size: 16px; }
 
-.sheet-attribute .sheet-row-perception .sheet-whisper-box .sheet-whisper-checkbox {
-    float: left;
-    width: 16px;
-}
-
-.sheet-attribute .sheet-row-perception .sheet-whisper-box .sheet-whisper-checkbox input[type=checkbox] {
-    height: 15px;
-}
-
-.sheet-attribute .sheet-row-perception .sheet-whisper-box .sheet-whisper-title {
-    float: left;
-}
-
-
 .sheet-attribute .sheet-row-willpower { height: 25px; }
 .sheet-attribute .sheet-row-willpower .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-willpower .sheet-col1 input { font-size: 16px; }
@@ -1866,6 +1852,14 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 
 .sheet-active-defense .sheet-col-dodge { width: calc(100% - 431px); }
 
+.sheet-combat-reflexes {
+    margin: 5px 0 0 5px;
+}
+
+.sheet-combat-reflexes .sheet-tooltip {
+    margin-left: 0;
+}
+
 .sheet-active-defense input.sheet-combat-reflex-check {
     width: 22px!important; 
     float: left; 
@@ -1937,7 +1931,7 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 /* -- DEFENSE BONUS -- */
-.sheet-defense-bonus-notes { width: calc(100% - 0.4em); }
+.sheet-defense-bonus-notes { margin-top: 5px; width: calc(100% - 0.4em); }
 
 
 /* -- Melee Attacks -- */
