--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1848,9 +1848,13 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 /* -- COMBAT -- */
 .sheet-active-defense { width: calc(100% - 140px - 0.8em); }
 
+.sheet-active-defense .sheet-margin-left {
+    margin-left: 43px;
+}
+
 .sheet-active-defense .sheet-col-dodge-label { width: 262px; }
 
-.sheet-active-defense .sheet-col-dodge { width: calc(100% - 431px); }
+.sheet-active-defense .sheet-col-dodge { width: calc(100% - 589px); }
 
 .sheet-combat-reflexes {
     margin: 5px 0 0 5px;
@@ -1891,23 +1895,42 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 
 /* -- ACTIVE DEFENSE -- */
 .sheet-active-defense .sheet-col0 {
-    margin-left: 22px;
-    width: calc(100% - 191px);
+    margin-left: 42px;
+    width: calc(100% - 326px);
 }
+
 .sheet-active-defense .sheet-col0 input { text-align:left; }
-.sheet-active-defense .sheet-col1 { width: 65px; }
+.sheet-active-defense .sheet-col1 { width: 105px; }
 .sheet-active-defense .sheet-col2 { width: 40px; }
 .sheet-active-defense .sheet-col3 { width: 30px; }
 .sheet-active-defense .sheet-col4 { width: 22px; }
 
 /* -- Active Defense Note Box -- */
+
+.sheet-active-defense input.sheet-toggle-highlight[type="checkbox"] {
+    width: 16px;
+    height: 22px;
+    opacity: 1;
+    position: absolute;
+    margin-left: 5px;
+}
+
 .sheet-active-defense .sheet-toggle-notes {
     position: absolute;
-    left: 0;
+    left: 22px;
+}
+
+.sheet-active-defense .sheet-toggle-notes.sheet-static-defense {
+    position: absolute;
+    left: 54px;
 }
 
 .sheet-box.sheet-active-defense .sheet-toggle.sheet-toggle-notes ~ .sheet-checkbox {
-    left: 0;
+    left: 22px;
+}
+
+.sheet-box.sheet-active-defense .sheet-toggle.sheet-toggle-notes ~ .sheet-checkbox.sheet-static-defense {
+    left: 54px;
 }
 
 /* Text Area Box Styling for Defense Bonus (DB) Notes*/
@@ -1993,7 +2016,9 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details2,
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-melee-notebox,
-.sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-ranged-notebox {
+.sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-ranged-notebox,
+.sheet-active-defense input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
+.sheet-active-defense input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-notebox {
     background: #B7FFAA;    
 }
 
