--- a/Shadowrun4thEdition/src/pug/_variables.pug
+++ b/Shadowrun4thEdition/src/pug/_variables.pug
@@ -20,13 +20,17 @@
 - const weaponModes = ['BF', 'FA', 'SA', 'SS', 'Other'];
 
 //- TABS
-- const tabs = ['core', 'arms', 'augs', 'gear', 'magic', 'matrix', 'social', 'vehicle']
+- const tabs = ['core', 'arms', 'augs', 'gear', 'magic', 'matrix', 'social', 'vehicle'];
+
+//- PROTECTIONS
+- const armorProcAbbrev = ['Acid', 'Cold', 'Elec', 'Fire', 'Radi', 'Laser', 'Gause'];
+- const armorProtections = ['Acid', 'Cold', 'Electrical', 'Fire', 'Radiation', 'Laser', 'Gause Round'];
+- const armorTypes = ['Ballistic', 'Impact']
 
 //- LOOP OBJECTS
-- const limitObject = {'Mental':'mental_limit', 'Physical':'physical_limit', 'Social':'social_limit', 'Attack':'attack', 'Data Processing':'data_processing', 'Firewall':'firewall', 'Sleaze':'sleaze'};
 - const hostObject = {'Host Rating': ['host_rating', '5'], 'Attack': ['attack', '5'], 'Sleaze': ['sleaze', '6'], 'Data Processing': ['data_processing', '7'], 'Firewall': ['firewall', '8']};
 - const spriteObject = {'Level': ['level', '5'], 'Attack': ['attack', '5'], 'Sleaze': ['sleaze', '6'], 'Data Processing': ['data_processing', '7'], 'Firewall': ['firewall', '8']};
-- const npcWeaponsObject = {'Range': {'type': 'select', 'default': 'range'}, 'Dice': {'type': 'number', 'placeholder': '18'},'Name': {'type': 'text', 'placeholder': 'Ares Predator'}, 'Type': {'type': 'text', 'placeholder': 'Heavy Pistol'}, 'Reach': {'type': 'number', 'placeholder': '0'}, 'ACC': {'type': 'text', 'placeholder': '5'},'Dam': {'type': 'text', 'placeholder': '9P'},  'AP': {'type': 'number', 'placeholder': '-2'},'Modes': {'type': 'text', 'placeholder': 'SA/BF/FA'},'Recoil': {'type': 'text', 'placeholder': '+2'},'Ammo': {'type': 'number', 'placeholder': '15'}, 'Notes': {'type': 'text', 'placeholder': 'w/ 3 clips of explosive rounds'}};
+- const npcWeaponsObject = {'Range': {'type': 'select', 'default': 'range'}, 'Dice': {'type': 'number', 'placeholder': '18'},'Name': {'type': 'text', 'placeholder': 'Ares Predator'}, 'Type': {'type': 'text', 'placeholder': 'Heavy Pistol'}, 'Reach': {'type': 'number', 'placeholder': '0'}, 'Dam': {'type': 'text', 'placeholder': '9P'},  'AP': {'type': 'number', 'placeholder': '-2'},'Modes': {'type': 'text', 'placeholder': 'SA/BF/FA'},'Recoil': {'type': 'text', 'placeholder': '+2'},'Ammo': {'type': 'number', 'placeholder': '15'}, 'Notes': {'type': 'text', 'placeholder': 'w/ 3 clips of explosive rounds'}};
 - const npcSpellObject = {'Category': {'type': 'select', 'default': 'combat', 'array': spellCatagories}, 'Dice': {'type': 'number', 'placeholder': '18'}, 'Name': {'type': 'text', 'placeholder': 'Fireball'}, 'Type': {'type': 'select', 'default': 'P', 'array': spellTypes}, 'Range': {'type': 'select', 'default': 'LOS', 'array':spellRanges}, 'Duration': {'type': 'select', 'default': 'Instant', 'array':spellDurations}, 'Drain': {'type': 'number', 'placeholder': '-1'}, 'Combat': {'type': 'select', 'default': 'Force', 'array':spellCombatTypes}, 'Dam': {'type': 'text', 'placeholder': 'P'}, 'Notes': {'type': 'text', 'placeholder': 'may start fires'}};
 
 - const npcComplexFormsObject = {'Dice': {'type': 'number', 'placeholder': '18'}, 'Name': {'type': 'text', 'placeholder': 'Editor'}, 'Target': {'type': 'select', 'default': 'device', 'array': formTargets}, 'Duration': {'type': 'text', 'placeholder': 'Permanent'}, 'Fade': {'type': 'number', 'placeholder': '+2'}, 'Notes': {'type': 'text', 'placeholder': 'edit files'}};
@@ -35,23 +39,20 @@
 //- PC MAGIC
 - const pcCoreSpellObject = {'Name': {'type': 'text', 'placeholder': 'Fireball'}, 'Type': {'type': 'select', 'default': 'physical', 'array': spellTypes}, 'Range': {'type': 'select', 'default': 'los', 'array':spellRanges}, 'Duration': {'type': 'select', 'default': 'instant', 'array':spellDurations}, 'Drain': {'type': 'number', 'placeholder': '-1'}};
 - const pcCatagorySpellObject = {'Category': {'type': 'select', 'default': 'combat', 'array': spellCatagories}, 'Combat': {'type': 'select', 'default': 'force', 'array':spellCombatTypes}, 'Damage': {'type': 'text', 'placeholder': 'P'}};
-- const pcAlchemySpellObject = {'Skill': {'type': 'select', 'default': '@{alchemy}', 'array':['Enchanting Group', 'Alchemy']}, 'Specialization': {'type': 'checkbox', 'default': '2'}, 'modifier dice': {'type': 'number', 'placeholder': '0', 'default': '0'}};
+- const pcAlchemySpellObject = {'Skill': {'type': 'select', 'default': '@{alchemy}', 'array':['Alchemy']}, 'Specialization': {'type': 'checkbox', 'default': '2'}, 'modifier dice': {'type': 'number', 'placeholder': '0', 'default': '0'}};
 - const pcSorcerySpellObject = {'Skill': {'type': 'select', 'default': '@{spellcasting}', 'array':['Sorcery Group', 'Spellcasting']}, 'Specialization': {'type': 'checkbox', 'default': '2'}, 'modifier dice': {'type': 'number', 'placeholder': '0', 'default': '0'}};
 
 //- PC MATRIX
 - const pcComplexFormButton = {'name': 'complex_form', 'header': '@{name}', 'rollFormula': '@{skill}+@{dicepool}+@{resonance}', 'desc': '{{desc=Level ?{Level|}, Fade [[?{Level|}+(@{fade})]]}}', 'display': 'name'};
 
 //- PC WEAPONS
-- const pcRangeWeaponObject = {'Weapon': {'type': 'text', 'placeholder': 'Ares Predator'}, 'Dam': {'type': 'text', 'placeholder': '9P'}, 'ACC': {'type': 'text', 'placeholder': '5'}, 'AP': {'type': 'number', 'placeholder': '-2'}, 'Mode': {'type': 'select', 'default': 'SS', 'array':weaponModes}, 'Recoil': {'type': 'number', 'placeholder': '+2'},'Ammo': {'type': 'number', 'placeholder': '15'}};
-- const pcMeleeWeaponObject = {'Weapon': {'type': 'text', 'placeholder': 'Katana'}, 'Dam': {'type': 'text', 'placeholder': '5P'}, 'ACC': {'type': 'text', 'placeholder': '7'}, 'AP': {'type': 'number', 'placeholder': '-3'}, 'Reach': {'type': 'number', 'placeholder': '1'}};
-
-//- PC ARMOR
-- const pcArmorObject = {'Name': {'type': 'text', 'placeholder': 'Armor Jacket'}, 'Rating': {'type': 'number', 'placeholder': '12'}, 'Acid': {'type': 'number', 'placeholder': '+5'}, 'Cold': {'type': 'number', 'placeholder': '0'}, 'Electrical': {'type': 'number', 'placeholder': '0'}, 'Fire': {'type': 'number', 'placeholder': '0'} , 'Radiation': {'type': 'number', 'placeholder': '0'}};
+- const pcRangeWeaponObject = {'Weapon': {'type': 'text', 'placeholder': 'Ares Predator'}, 'Dam': {'type': 'text', 'placeholder': '9P'}, 'AP': {'type': 'number', 'placeholder': '-2'}, 'Mode': {'type': 'select', 'default': 'SS', 'array':weaponModes}, 'Recoil': {'type': 'number', 'placeholder': '+2'},'Ammo': {'type': 'number', 'placeholder': '15'}};
+- const pcMeleeWeaponObject = {'Weapon': {'type': 'text', 'placeholder': 'Katana'}, 'Dam': {'type': 'text', 'placeholder': '5P'}, 'AP': {'type': 'number', 'placeholder': '-3'}, 'Reach': {'type': 'number', 'placeholder': '1'}};
 
 //- Weapons
-- const weaponButton = {'name': 'weapon', 'header': '@{weapon_type}', 'rollFormula': '@{weapon_dice}', 'desc': '{{desc=ACC @{weapon_acc}, DV @{weapon_dv}, AP @{weapon_ap}}}{{rea=[[@{weapon_reach}]]}}', 'display': 'weapon_name'};
-- const pcRangeWeaponButton = {'name': 'range_weapon', 'header': '@{weapon}', 'rollFormula': '@{skill}+@{dicepool}+@{agility}', 'desc': '{{desc=@{mode}, ACC @{acc}, DV @{damage}, AP @{ap}}}', 'display': 'weapon'};
-- const pcMeleeWeaponButton = {'name': 'melee_weapon', 'header': '@{weapon}', 'rollFormula': '@{skill}+@{dicepool}+@{agility}', 'desc': '{{desc=ACC @{acc}, DV @{damage}, AP @{ap}, Reach @{reach}}}', 'display': 'weapon'};
+- const weaponButton = {'name': 'weapon', 'header': '@{weapon_type}', 'rollFormula': '@{weapon_dice}', 'desc': '{{desc= DV @{weapon_dv}, AP @{weapon_ap}}}{{rea=[[@{weapon_reach}]]}}', 'display': 'weapon_name'};
+- const pcRangeWeaponButton = {'name': 'range_weapon', 'header': '@{weapon}', 'rollFormula': '@{skill}+@{dicepool}+@{agility}', 'desc': '{{desc=@{mode}, DV @{damage}, AP @{ap}}}', 'display': 'weapon'};
+- const pcMeleeWeaponButton = {'name': 'melee_weapon', 'header': '@{weapon}', 'rollFormula': '@{skill}+@{dicepool}+@{agility}', 'desc': '{{desc=DV @{damage}, AP @{ap}, Reach @{reach}}}', 'display': 'weapon'};
 
 	//- MAGIC
 - const npcSpellButton = {'name': 'spell', 'header': '@{name}', 'rollFormula': '@{dice}', 'desc': '{{desc=@{category}?{Force|}, Drain [[?{Force|}+(@{drain})]]}}', 'display': 'name'};
