--- a/Shadowrun4thEdition/src/scss/_hide.scss
+++ b/Shadowrun4thEdition/src/scss/_hide.scss
@@ -5,8 +5,6 @@
 
 	%display-grid { display: grid; }
 
-	.sheet-pictos { font-family: 'Pictos'; }
-
 	%display-inline-block,
 	.sheet-static {
 		display: inline-block;
@@ -211,6 +209,6 @@
 
 	%highlight-button {
 		background-color: $primary;
-		box-shadow      : inset 0px 0px 3px 1px $accent1; 
+		box-shadow      : inset 0px 0px 3px 1px $accent;
 		color           : $white;
 	}
