--- a/Shadowrun4thEdition/src/scss/_npc.scss
+++ b/Shadowrun4thEdition/src/scss/_npc.scss
@@ -33,10 +33,10 @@
 
 		&[type='text']:placeholder-shown,
 		&[type='number']:placeholder-shown {
-			border: 1px dotted $accent1;
+			border: 1px dotted $accent
 		}
 
-		&.sheet-toggle:checked + span { color: $accent1; }
+		&.sheet-toggle:checked + span { color: $accent }
 	}
 
 	textarea, select {
@@ -77,7 +77,7 @@
 			height: 100%;
 		}
 
-		input[name='attr_stats_toggle']:checked + span { color: $accent1; }
+		input[name='attr_stats_toggle']:checked + span { color: $accent }
 		span.sheet-pictos {
 			text-align: center;
 			font-size: 1.2em;
