--- a/Shadowrun4thEdition/src/scss/abstracts/_variables.scss
+++ b/Shadowrun4thEdition/src/scss/abstracts/_variables.scss
@@ -1,8 +1,7 @@
 //- Colors:
   $primary: rgba(175,211,226,1);
   $secondary: rgba(245,245,245,1);
-  $accent: #610b0d;
-  $accent1: #1e4583;
+  $accent: #1e4583;
   $lightgray: #9a9a9a;
   $graytrans: rgba(28, 28, 28, 0.14902);
   $grayshadow: #7c7c7c;
