--- a/Shadowrun4thEdition/src/scss/base/_generic.scss
+++ b/Shadowrun4thEdition/src/scss/base/_generic.scss
@@ -1,5 +1,5 @@
 .sheet-red {
-  color: $accent1;  
+  color: $accent  
 }
 
 .sheet-text-align-center,
@@ -13,11 +13,18 @@
     white-space: nowrap;  
 }
 
-
 .sheet-text-capitalize {
   text-transform: capitalize;
 }
 
 .sheet-text-left {
   text-align: left;
+}
+
+.sheet-pictos { 
+  font-family: 'Pictos'; 
+}
+
+.sheet-font-bold {
+  font-weight: bold;
 }
