--- a/Shadowrun4thEdition/Shadowrun4thEdition.scss
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.scss
@@ -58,7 +58,7 @@
 		.sheet-con-track button[type='action']:hover,
 		button[data-i18n='default']:hover {
 			color      : #fff;
-			text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $primary;
+			text-shadow: 1px 1px 2px black, 0 0 25px $accent, 0 0 5px $primary;
 		}
 
 		h1 {
@@ -171,7 +171,7 @@
       }
 			
 			&:checked + span {  
-        color: $accent1;
+        color: $accent
       }
 		}
 
@@ -198,11 +198,11 @@
 
 		/***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/			
 		div.sheet-border-box {
-			background-image: -moz-linear-gradient($accent1, transparent), -moz-linear-gradient($accent1, transparent);
-			background-image: -o-linear-gradient($accent1, transparent), -o-linear-gradient($accent1, transparent);
-			background-image: -webkit-gradient(linear, 0 0, 0 100%, from($accent1), to(transparent));
-			background-image: -webkit-linear-gradient($accent1, transparent);
-			background-image: linear-gradient($accent1, transparent), linear-gradient($accent1, transparent);
+			background-image: -moz-linear-gradient($accent, transparent), -moz-linear-gradient($accent, transparent);
+			background-image: -o-linear-gradient($accent, transparent), -o-linear-gradient($accent, transparent);
+			background-image: -webkit-gradient(linear, 0 0, 0 100%, from($accent), to(transparent));
+			background-image: -webkit-linear-gradient($accent, transparent);
+			background-image: linear-gradient($accent, transparent), linear-gradient($accent, transparent);
 			border-top      : 2px solid $primary;
 			clear           : both;
 			border-top-right-radius: 10px;
@@ -455,7 +455,9 @@
 				display: grid;
 				@extend %gridGap;
 
-				h2:nth-of-type(1n+2) { text-align: center; }
+				h2:nth-of-type(1n+2) { 
+          text-align: center; 
+        }
 			}
 
 			div.repitem {
@@ -464,15 +466,41 @@
 				input { 
 					&:nth-of-type(1n+2) { text-align: center; }
 
-					&.sheet-flag-primary[value='primary'] + button {
-						background-color: $accent;
-						border-bottom: 2px solid $blacker;
+          &.sheet-flag-primary[value='primary'] + button,
+          &.sheet-flag-primary[value='primary'] + div.sheet-primary {
+            background-color: $primary;
+            border-bottom: 2px solid $blacker;
+            border-right: 0;
+          }
+
+
+					&.sheet-flag-primary[value='primary'] + button:hover {
+            background-color: $accent;
+            color: $white;
 					}
 				}
+
+        div.sheet-primary {
+          padding: 0.5% 1%;
+        }
+
+        h2,
+        label.sheet-protections {
+          width: 11%;
+        }
+
+        h2:nth-of-type(1n+2),
+        label.sheet-protections:nth-of-type(1n+2) {
+          margin-left: 2%;
+        }
+
+        label.sheet-protections > input {
+          width: 100%;
+        }
 			}
 
 			div.sheet-weapons {
-				$weaponsGrid: 25% 1.25fr 3em 2.5em 3em 1fr 1fr 1em 1em;
+				$weaponsGrid: 1fr  5em 2.5em 3em 1fr 1fr 1em 1em;
 				div.sheet-headers { grid-template-columns:$weaponsGrid; }
 
 				div.repitem {
@@ -508,19 +536,19 @@
 			}
 
 			div.sheet-armor {
-				$armorGrid: 30% 3.5em 2.5em 2.5em 2.5em 2.5em 2.5em 1em 1em;
+				$armorGrid: 1fr 5em 5em 1em 1em;
 				div.sheet-headers { grid-template-columns:$armorGrid; }
 
 				div.repitem {
 					grid-template-columns: $armorGrid;
-					@include repeatingInformation(11, false);
+					@include repeatingInformation(6, false);
 
 					div.sheet-settings { 
-						grid-column: 1 / 11;
+						grid-column: 1 / 6;
 						grid-template-columns: $armorGrid;
 
 						div.sheet-row {
-							grid-column: 1 / 11;
+							grid-column: 1 / 6;
 						}
 					}
 				}
@@ -834,7 +862,7 @@
 
           &:hover ~ h1,
           &:checked ~ h1  {
-            color: $accent1;
+            color: $accent
           }
         }
       }
