--- a/Shadowrun4thEdition/src/scss/_repeatingsection.scss
+++ b/Shadowrun4thEdition/src/scss/_repeatingsection.scss
@@ -32,9 +32,20 @@
 		width: 12px;
 	}
 
-	.repcontrol .repcontrol_edit:after {content: '(';}
-	.repcontrol .repcontrol_add:after {content: '&';}
-	.editmode ~ .repcontrol .repcontrol_edit:after {content: ')';}
+	.repcontrol .repcontrol_edit:after {
+    content: '(';
+    @extend .sheet-pictos;
+  }
+
+	.repcontrol .repcontrol_add:after {
+    content: '&';
+    @extend .sheet-pictos;
+  }
+
+	.editmode ~ .repcontrol .repcontrol_edit:after {
+    content: ')';
+    @extend .sheet-pictos;
+  }
 
 	.repcontrol .repcontrol_edit:after,
 	.repcontrol .repcontrol_add:after {
@@ -48,7 +59,7 @@
 
 		.repcontrol .repcontrol_edit:hover:after,
 		.repcontrol .repcontrol_add:hover:after {
-			color           : $accent1;
+			color           : $accent;
 			background-color: none;
     }
 
