--- a/Shadowrun4thEdition/src/scss/_rolltemplate.scss
+++ b/Shadowrun4thEdition/src/scss/_rolltemplate.scss
@@ -1,12 +1,12 @@
 	.sheet-rolltemplate-rolls div.sheet-template-body {
-		border       : 2px solid #000 !important;
+		border       : 2px solid $blacker !important;
 		border-radius: 3px 3px 3px 3px;}
 
 	.sheet-rolltemplate-rolls .sheet-template-header {
 		background-color: $primary;
-		border          : 1px solid #000;
-		border-bottom   : 2px solid #000;
-		box-shadow      : inset 0px 0px 3px 1px #000;
+		border          : 1px solid $blacker;
+		border-bottom   : 2px solid $blacker;
+		box-shadow      : inset 0px 0px 3px 1px $blacker;
 		color           : $blackish;
 		font-size       : 1.5em;
 		font-variant    : small-caps;
@@ -27,27 +27,31 @@
 		color           : $white;
 		text-align      : center;
 		font-size       : 18px;
-		background-color: #555;
-		box-shadow      : inset 0px 0px 3px 1px #000;
+		background-color: $blacker;
+		box-shadow      : inset 0px 0px 3px 1px $blacker;
 		line-height     : 1.1em;
 		font-family     : 'helvetica';
-		padding         : 5px 5px 3px 5px;}
+		padding         : 5px 5px 3px 5px;
+  }
 
-	.sheet-rolltemplate-rolls .sheet-template-row:nth-child(2n+0) {background-color: #1c1c1c;}
+	.sheet-rolltemplate-rolls .sheet-template-row:nth-child(odd) {
+    background-color: $grayshadow;
+  }
 
 	.sheet-rolltemplate-rolls .inlinerollresult {
 		display         :inline-block;
 		color           : $white;
 		font-size       : 25px;
 		background-color: transparent;
-		border          : none;}
+		border          : none;
+  }
 
 	.sheet-rolltemplate-rolls .inlinerollresult.fullfail,
 	.sheet-rolltemplate-rolls .inlinerollresult.fullcrit,
 	.sheet-rolltemplate-rolls .inlinerollresult.importantroll {
 		border: none;}
 
-	.sheet-rolltemplate-rolls .inlinerollresult.fullfail {color: $accent1;}
+	.sheet-rolltemplate-rolls .inlinerollresult.fullfail {color: $primary}
 
 	.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {color: $white;}
 
