--- a/Shadowrun4thEdition/src/scss/base/_base.scss
+++ b/Shadowrun4thEdition/src/scss/base/_base.scss
@@ -27,7 +27,16 @@
       &:focus, 
       &:active { 
         font-weight: bold;
-        background-color: $accent1;
+        background-color: $accent;
+        color: $white;
+
+        & > span {
+          color: $white;
+        }
+      }
+
+      &.sheet-pictos { 
+        font-family: 'Pictos'; 
       }
 		}
 
@@ -105,12 +114,12 @@
 		width: auto;
 
     &.sheet-attribute-select {
-      option:nth-of-type(1n+5) { color: $accent1; }
+      option:nth-of-type(1n+5) { color: $accent }
       option:nth-of-type(1n+9) { color: $accent;  }
     }
 
     &.sheet-limit-select  {
-      option:nth-of-type(1n+5) { color: $accent1; }
+      option:nth-of-type(1n+5) { color: $accent }
     }
   }
 
