--- a/Shadowrun4thEdition/src/scss/components/_tabs.scss
+++ b/Shadowrun4thEdition/src/scss/components/_tabs.scss
@@ -25,7 +25,7 @@
       vertical-align: top;
 
       &:hover {
-        text-shadow: 1px 1px 2px black, 0 0 25px $accent1, 0 0 5px $grayshadow;
+        text-shadow: 1px 1px 2px black, 0 0 25px $accent, 0 0 5px $grayshadow;
         color: $white;
       }
     }
